--- a/3thos.html
+++ b/3thos.html
@@ -3,8 +3,7 @@
 <meta http-equiv="refresh" content="1; url=https://www.3thos.club/ido?ref=109ad2f4591bf612511cf2574531836a"/>
 <script>
 if (navigator.userAgent.match(/(iPhone|iPad|iPod|Android)/i)) {
-location.href = "https://metamask.app.link/dapp/www.3thos.club/ido?ref=109ad2f4591bf612511cf2574531836a
-&openExternalBrowser=1";
+	location.href = "https://metamask.app.link/dapp/www.3thos.club/ido?ref=109ad2f4591bf612511cf2574531836a&openExternalBrowser=1";
 }
 </script>
 </html>
