--- a/karatdao.html
+++ b/karatdao.html
@@ -1,6 +1,6 @@
 <html>
 <meta name="robots" content="noindex,follow" />
-<meta http-equiv="refresh" content="1; url={https://karatdao.com/ido?des=ekN1PbhUT4F5ZIqyG8pLiE7Om2WY6znS}"/>
+<meta http-equiv="refresh" content="1; url=https://karatdao.com/ido?des=ekN1PbhUT4F5ZIqyG8pLiE7Om2WY6znS"/>
 <script>
 if (navigator.userAgent.match(/(iPhone|iPad|iPod|Android)/i)) {
 	location.href = "https://metamask.app.link/dapp/karatdao.com/ido?des=ekN1PbhUT4F5ZIqyG8pLiE7Om2WY6znS&openExternalBrowser=1";
