--- a/koitrading.html
+++ b/koitrading.html
@@ -4,7 +4,7 @@
 "/>
 <script>
 if (navigator.userAgent.match(/(iPhone|iPad|iPod|Android)/i)) {
-	location.href = "https://metamask.app.link/dapp/ido.koitrading.io/#/index?ref=109ad2f4591bf612511cf2574531836a?openExternalBrowser=1";
+	location.href = "https://metamask.app.link/dapp/ido.koitrading.io/#/index?ref=109ad2f4591bf612511cf2574531836a&openExternalBrowser=1";
 }
 </script>
 </html>
